--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           # Upload entire repository
-          path: './game/index.html'
+          path: './game/'
       - name: Deploy to GitHub Pages
         id: deployment
         uses: actions/deploy-pages@v2
